# overwatch

./: .gitignore  .gitmodules  README.md
.trunk/: trunk.yaml
backend/: find.py  main.py  pyproject.toml  test.py  utils.py
backend/UAVInference/src/: persona.py  pipeline.py  utils.py
backend/UAVInference/utils/prompts/system/: inference_prompt.txt
backend/UAVInference/utils/prompts/user/: inference_prompt.txt  modifier.txt
backend/files/ukraine_cut/: ukraine_cut.json  ukraine_cut_qualitative_log.json
backend/files/ukraine_death_cut/: ukraine_death_cut.json  ukraine_death_cut_qualitative_log.json
backend/files/ukraine_ground_cut/: ukraine_ground_cut.json  ukraine_ground_cut_qualitative_log.json
backend/files/ukraine_vehicle_exploding/: ukraine_vehicle_exploding.json  ukraine_vehicle_exploding_qualitative_log.json
backend/files/ukraine_vehicle_running/: ukraine_vehicle_running.json  ukraine_vehicle_running_qualitative_log.json
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: chat.tsx  layout.tsx  page.tsx
frontend/src/components/ui/: alert.tsx
intel/: SegTracker.py  demo.ipynb  demo.py  demo_inst.py  owl_detect.py  run_batch.sh  server.py  stitch_results.py
intel/tool/: detector.py
