[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Justin W. Lin <justin@lin.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
openmim = "^0.3.9"
transformers = "^4.40.1"
decord = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
