[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Justin W. Lin <justin@lin.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
openmim = "^0.3.9"
transformers = "^4.40.1"
decord = "^0.6.0"
opencv-python = "^4.9.0.80"
supervision = "^0.20.0"
addict = "^2.4.0"
yapf = "^0.40.2"
pycocotools = "^2.0.7"
timm = "^0.9.16"
tqdm = "^4.66.4"
openai = "^1.25.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
requests = "^2.31.0"
numpy = "^1.26.4"
tankbuster = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
